Fixed alignment

--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,7 @@
 .App {
   display: flex;
   flex-direction: column;
+  align-items: center;
   user-select: none;
   overflow-x: hidden;
 }
